--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,7 +10,7 @@ jobs:
         uses: shalzz/zola-deploy-action@v0.13.0
         env:
           PAGES_BRANCH: gh-pages
-          BUILD_DIR: .
+          BUILD_DIR: ningunx-presx-por-luchar
           TOKEN: ${{ secrets.TOKEN }}
           # BUILD_ONLY: true
   build_and_deploy:
