--- a/ningunx-presx-por-luchar/config.toml
+++ b/ningunx-presx-por-luchar/config.toml
@@ -1,7 +1,8 @@
 base_url = "https://ningunx-presx-por-luchar.info"
 compile_sass = true
 build_search_index = false
-title="Blog"
+title="Coordinación Antirepresiva y por las Libertades"
+theme="DeepThought"
 
 taxonomies = [
     { name = "tags", fees = false, paginate_by = 10 },
@@ -12,23 +13,22 @@ highlight_code = true
 [extra]
 navbar_items = [
     { code = "es", nav_items = [
-        { url = "/", name = "Inicio" },
-        { url = "/posts", name = "Publicaciones" },
-        { url = "/tags", name = "Etiquetas" },
+        { url = "$BASE_URL/", name = "Inicio" },
+        { url = "$BASE_URL/posts", name = "Publicaciones" },
+        { url = "$BASE_URL/tags", name = "Etiquetas" },
     ] },
 ]
 
-
 [extra.favicon]
-favicon_16x16 = "icons/favicon-16x16.png"
-favicon_32x32 = "icons/favicon-32x32.png"
-apple_touch_icon = "icons/apple-touch-icon.png"
-safari_pinned_tab = "icons/safari-pinned-tab.svg"
-webmanifest = "icons/site.webmanifest"
+favicon_16x16 = "/icons/favicon-16x16.png"
+favicon_32x32 = "/icons/favicon-32x32.png"
+apple_touch_icon = "/icons/apple-touch-icon.png"
+safari_pinned_tab = "/icons/safari-pinned-tab.svg"
+webmanifest = "/icons/site.webmanifest"
 
 # Author details
 [extra.author]
-name = "DeepThought"
+name = ""
 avatar = "images/avatar.png"
 
 # Social links
