--- a/ningunx-presx-por-luchar/Dockerfile
+++ b/ningunx-presx-por-luchar/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /site
 ADD https://github.com/getzola/zola/releases/download/v0.14.1/zola-v0.14.1-x86_64-unknown-linux-gnu.tar.gz /tmp
 
 RUN apt-get update && \
-    apt-get install git && \
+    apt-get install git -Y && \
     git submodule init \
     tar -C /usr/bin -xvzf /tmp/zola-v0.14.1-x86_64-unknown-linux-gnu.tar.gz &&\
     zola build && \
