--- a/ningunx-presx-por-luchar/Makefile
+++ b/ningunx-presx-por-luchar/Makefile
@@ -1,6 +1,6 @@
 up:
 	git pull
-	ln -s docker/zola . 2>/dev/null
+	ln -s docker/zola . 2>/dev/null; exit 0
 	cd docker && \
 	docker-compose build && \
 	docker-compose up -d
