--- a/ningunx-presx-por-luchar/Makefile
+++ b/ningunx-presx-por-luchar/Makefile
@@ -2,8 +2,12 @@ up:
 	git pull
 	ln -s docker/zola . || exit 0
 	cd docker && \
-	docker-compose build && \
 	docker-compose up -d
+
+build:
+	ln -s docker/zola . || exit 0
+	cd docker && \
+	docker-compose build
 
 serve:
 	zola serve
