--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "DeepThought"]
+[submodule "nginx-certbot"]
 	path = DeepThought
-	url = https://github.com/RatanShreshtha/DeepThought
-[submodule "ningunx-presx-por-luchar/themes/DeepThought"]
-	path = ningunx-presx-por-luchar/themes/DeepThought
 	url = https://github.com/RatanShreshtha/DeepThought
