--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - "zola"
     volumes:
-      - ./nginx_conf:/etc/nginx/templates
+      - ./nginx/nginx_conf:/etc/nginx/templates
       - public_files:/usr/share/nginx/html/:ro
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
