--- a/ningunx-presx-por-luchar/Makefile
+++ b/ningunx-presx-por-luchar/Makefile
@@ -1,6 +1,6 @@
 up:
 	git pull
-	ln -s docker/zola . || exit 0
+	make link_zola_dockerfile
 	cd docker && \
 	docker-compose up -d
 
@@ -12,8 +12,12 @@ build:
 serve:
 	zola serve
 
+link_zola_dockerfile:
+	@ln -s docker/zola . || exit 0
+
 init:
 	git pull
+	make link_zola_dockerfile
 	cd docker && \
 	chmod +x init-script.bash && \
 	sudo ./init-script.bash
