--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - 80:80
       - 443:443
     environment:
-      - NGINX_HOST=ningunx-presx-por-luchar.info
+      - NGINX_HOST=www.ningunx-presx-por-luchar.info
       - NGINX_PORT=80
       - NGINX_ENTRYPOINT_QUIET_LOGS=1
     depends_on:
