--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot re1w; sleep 12h & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
   public_files:
