--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+      - ~/.secrets/certbot/digitalocean.ini:~/digitalocean.ini
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
