--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-      - ~/.secrets/certbot/digitalocean.ini:/digitalocean.ini:ro
+      - ~/.secrets/certbot/digitalocean.ini:/digitalocean.ini:600
     entrypoint: "/bin/sh -c 'rm -rf ~/digitalocean.ini; trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
