--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "zola"
     volumes:
       - ./nginx:/etc/nginx/conf.d
-      - public_files:/usr/share/nginx/html/
+      - public_files:/usr/share/nginx/html/:ro
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
