--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -1,12 +1,9 @@
 FROM ubuntu:latest
+ENV ZOLA_PATH="/usr/bin/zola"
 
 COPY . /site
 WORKDIR /site
+COPY docker/zola $ZOLA_PATH
+RUN chmod +x $ZOLA_PATH
 
-COPY docker/zola /usr/bin/zola
-
-RUN apt-get update && \
-    tar -C /usr/bin -xvzf /tmp/zola-v0.14.1-x86_64-unknown-linux-gnu.tar.gz && \
-    chmod +x /usr/bin/zola
-
-CMD ["/usr/bin/zola", "build"]
+CMD ["$ZOLA_PATH", "build"]
