--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     ports:
       - 80:80
       - 443:443
-    environment:
-      - NGINX_ENTRYPOINT_QUIET_LOGS=1
+    #environment:
+    #  - NGINX_ENTRYPOINT_QUIET_LOGS=1
     depends_on:
       - "zola"
     volumes:
