--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -1,13 +1,8 @@
 FROM alpine
 ENV ZOLA_PATH="/usr/bin/zola"
 ENV OUTPUT_DIR="/site/public"
-
-COPY . /site
-WORKDIR /site
-
 COPY docker/zola $ZOLA_PATH
-
 RUN chmod +x "$ZOLA_PATH" && \
-    chmod -R 777 .
-
+    chmod -R 777 . && \
+    ls /usr/bin | grep "zola"
 CMD ["$ZOLA_PATH", "build", "--output-dir" "$OUTPUT_DIR"]
