--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -3,8 +3,8 @@ ENV ZOLA_PATH="/usr/bin/zola"
 ENV OUTPUT_DIR="/site/public"
 COPY docker/zola $ZOLA_PATH
 RUN chmod +x "$ZOLA_PATH" && \
-    chmod -R 777 . && \
     ls /usr/bin | grep "zola"
 
 WORKDIR /site
+RUN chmod -R 777 .
 CMD ["zola", "build", "--output-dir" "$OUTPUT_DIR"]
