--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: zola_builder:latest #Build once
     build:
       context: ..
-    command: "/usr/bin/zola build --outputdir /public"
+    command: "zola build --outputdir /public"
     volumes:
       - .:/site:rw
       - public_files:/public:rw
