--- a/ningunx-presx-por-luchar/Makefile
+++ b/ningunx-presx-por-luchar/Makefile
@@ -1,5 +1,4 @@
 up:
-	git pull
 	make link_zola_dockerfile
 	cd docker && \
 	docker-compose up -d --force-recreate
@@ -13,13 +12,13 @@ serve:
 	zola serve
 
 link_zola_dockerfile:
+	@git pull
 	@ln -s docker/Dockerfile . 2>/dev/null || exit 0
 
 logs:
 	cd docker && docker-compose logs
 
 init:
-	git pull
 	make link_zola_dockerfile
 	cd docker && \
 	sudo bash ./init-script.bash
