--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -8,6 +8,6 @@ RUN curl -L https://github.com/getzola/zola/releases/download/$ZOLA_VERSION/zola
 RUN mv zola /usr/bin
 RUN dockerize -n --verbose -o /workdir /usr/bin/zola
 
-FROM scratch
+FROM debian
 COPY --from=builder /workdir .
 ENTRYPOINT [ "/usr/bin/zola" ]
