--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # Generated files
 .idea/**/contentModel.xml
 .api_token
-
+Dockerfile
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
