--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -10,4 +10,5 @@ RUN dockerize -n --verbose -o /workdir /usr/bin/zola
 
 FROM debian
 COPY --from=builder /workdir .
+RUN apt-get update
 ENTRYPOINT [ "/usr/bin/zola" ]
