--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -8,7 +8,7 @@ RUN curl -L https://github.com/getzola/zola/releases/download/$ZOLA_VERSION/zola
 RUN mv zola /usr/bin
 RUN dockerize -n --verbose -o /workdir /usr/bin/zola
 
-FROM debian
+FROM ubuntu
 COPY --from=builder /workdir .
 RUN apt-get update
 ENTRYPOINT [ "/usr/bin/zola" ]
