--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -1,13 +1,15 @@
-FROM bitnami/minideb AS builder
-ENV ZOLA_VERSION v0.14.1
-RUN install_packages python-pip curl tar python-setuptools rsync binutils
-RUN pip install dockerize
-RUN mkdir -p /workdir
-WORKDIR /workdir
-RUN curl -L https://github.com/getzola/zola/releases/download/$ZOLA_VERSION/zola-$ZOLA_VERSION-x86_64-unknown-linux-gnu.tar.gz | tar xz
-RUN mv zola /usr/bin
-RUN dockerize -n --verbose -o /workdir /usr/bin/zola
+FROM rust:slim-buster AS fetcher
+WORKDIR /
+RUN apt-get update && \
+    apt-get install -y curl
+RUN curl -sL $(curl -s https://api.github.com/repos/getzola/zola/releases/latest | \
+    grep browser_download_url | \
+    grep -i $(uname -s) | \
+    cut -d : -f 2,3 | \
+    sed 's/"//g') | \
+    tar zxf -
+RUN chmod u+x zola
 
-FROM ubuntu
-COPY --from=builder /workdir .
-ENTRYPOINT [ "/usr/bin/zola" ]
+FROM debian:buster-slim
+WORKDIR /
+COPY --from=fetcher /zola /usr/local/bin/zola
