--- a/ningunx-presx-por-luchar/docker/Dockerfile
+++ b/ningunx-presx-por-luchar/docker/Dockerfile
@@ -11,7 +11,6 @@ RUN curl -sL $(curl -s https://api.github.com/repos/getzola/zola/releases/latest
 RUN chmod u+x zola
 
 FROM debian:buster-slim
-WORKDIR /
 RUN apt install -y g++ \
-    libssl-dev \
+    libssl-dev
 COPY --from=fetcher /zola /usr/local/bin/zola
