--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   zola:
     image: balthek/zola:0.14.0 #Build once
-    command: "build --outputdir /public"
+    command: "build --output-dir /public"
     volumes:
       - .:/site:rw
       - public_files:/public:rw
