--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     command: "build --output-dir /public"
     working_dir: /app
     volumes:
-      - .:/app:rw
+      - ..:/app:rw
       - public_files:/public:rw
 
   nginx:
