--- a/ningunx-presx-por-luchar/docker/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3'
 services:
   zola:
     image: balthek/zola:0.14.0 #Build once
-    command: "build --output-dir /public"
-    working_dir: /app
+    command: "build"
+    working_dir: /site
     volumes:
-      - ..:/app:rw
-      - public_files:/public:rw
+      - ..:/site:rw
+      - public_files:/site/public:rw
 
   nginx:
     image: nginx
