--- a/ningunx-presx-por-luchar/Makefile
+++ b/ningunx-presx-por-luchar/Makefile
@@ -1,24 +1,24 @@
 up:
-	make link_zola_dockerfile
+	make start_dir
 	cd docker && \
 	docker-compose up -d --force-recreate
 
 build:
-	make link_zola_dockerfile
+	make start_dir
 	cd docker && \
 	docker-compose build
 
 serve:
 	zola serve
 
-link_zola_dockerfile:
+start_dir:
 	@git pull
-	@ln -s docker/Dockerfile . 2>/dev/null || exit 0
+	@ln -s docker/init.sh . 2>/dev/null || exit 0
 
 logs:
 	cd docker && docker-compose logs
 
 init:
-	make link_zola_dockerfile
+	make start_dir
 	cd docker && \
 	sudo bash ./init-script.bash
