--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     user: 1001:1001
     volumes:
       - ..:/home/site:rw
-      - public_files:/home/site:rw
+      - public_files:/home/site/public:rw
 
   nginx:
     image: nginx
