--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     working_dir: /home/site
     user: 1001:1001
     volumes:
-      - ..:/home/site:rw
+      - .:/home/site:rw
       - public_files:/home/site/public:rw
 
   nginx:
