--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   zola:
     image: balthek/zola:0.14.0 #Build once
     command: "build --output-dir /tmp/public"
-    working_dir: /home/site
+    working_dir: /site
     privileged: true
     volumes:
       - .:/site:rw
