--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       - NGINX_ENTRYPOINT_QUIET_LOGS=1
     volumes:
-      - ./public:/usr/share/nginx/html/:ro
+      - ./public:/usr/share/nginx/html/:rw
       - ./docker/nginx:/etc/nginx/conf.d
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
@@ -32,3 +32,6 @@ services:
       - ./data/certbot/www:/var/www/certbot
       - ~/.secrets/certbot/digitalocean.ini:/creds/digitalocean.ini:rw
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
+volumes:
+  public_files:
