--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     privileged: true
     volumes:
       - .:/site:rw
-      - ./public:/tmp/public:rw
+      - public_files:/tmp/public:rw
 
   nginx:
     image: nginx
@@ -18,7 +18,7 @@ services:
     environment:
       - NGINX_ENTRYPOINT_QUIET_LOGS=1
     volumes:
-      - ./public:/usr/share/nginx/html/:rw
+      - public_files:/usr/share/nginx/html/:rw
       - ./docker/nginx:/etc/nginx/conf.d
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
