--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -17,14 +17,16 @@ services:
     ports:
       - 80:80
       - 443:443
+    stdin_open: true
+    tty: true
     environment:
       - NGINX_ENTRYPOINT_QUIET_LOGS=1
     volumes:
       - public_files:/volume:rw
-      - ./docker/nginx:/etc/nginx/conf.d
+      - ./docker/nginx:/etc/nginx/
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    command: "/bin/sh -c 'cp /volume/public/* /usr/share/nginx/html/ && while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: "/bin/sh -c 'cp /usr/share/nginx/html/* /usr/share/nginx/html/ && while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     
   certbot:
     image: certbot/dns-digitalocean
