--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -23,10 +23,13 @@ services:
       - NGINX_ENTRYPOINT_QUIET_LOGS=1
     volumes:
       - public_files:/volume:rw
-      - ./docker/nginx:/etc/nginx/
+      - ./docker/nginx:/nginx_config:rw
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    command: "/bin/sh -c 'cp /usr/share/nginx/html/* /usr/share/nginx/html/ && while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: "/bin/sh -c '\
+              mkdir -p /volume/public/usr/share/nginx/html && \
+              cp /nginx_config/* /etc/nginx &&\
+              while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     
   certbot:
     image: certbot/dns-digitalocean
