--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     command: "/bin/sh -c '\
-              mkdir -p /volume/public/usr/share/nginx/html && \
+              cp -r /volume/public /usr/share/nginx/html && \
               cp -r /nginx_config/* /etc/nginx &&\
               while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     
