--- a/ningunx-presx-por-luchar/docker/nginx/sites-available/ningunx-presx-por-luchar.info.conf
+++ b/ningunx-presx-por-luchar/docker/nginx/sites-available/ningunx-presx-por-luchar.info.conf
@@ -2,7 +2,7 @@ server {
     listen                  443 ssl http2;
     listen                  [::]:443 ssl http2;
     server_name             www.ningunx-presx-por-luchar.info;
-    root                    /volume/public/usr/share/nginx/html;
+    root                    /usr/share/nginx/html;
 
     # SSL
     ssl_certificate         /etc/letsencrypt/live/ningunx-presx-por-luchar.info/fullchain.pem;
