--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     image: certbot/dns-digitalocean
     restart: unless-stopped
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/conf:/etc/letsencrypt/live/ningunx-presx-por-luchar.info
       - ./data/certbot/www:/var/www/certbot
       - ~/.secrets/certbot/digitalocean.ini:/creds/digitalocean.ini:rw
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
