--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     volumes:
       - public_files:/volume:rw
       - ./docker/nginx:/nginx_config:rw
-      - ./data/certbot/conf:/etc/letsencrypt/
-      - ./data/certbot/www:/var/www/certbot
+      - ./data/certbot/conf:/etc/letsencrypt/:rw
+      - ./data/certbot/www:/var/www/certbot:rw
     command: "/bin/sh -c '\
               cp -rf /volume/public/* /usr/share/nginx/html/ && \
               cp -rf /nginx_config/* /etc/nginx/ &&\
@@ -35,8 +35,8 @@ services:
     image: certbot/dns-digitalocean
     restart: unless-stopped
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt/
-      - ./data/certbot/www:/var/www/certbot
+      - ./data/certbot/conf:/etc/letsencrypt/:rw
+      - ./data/certbot/www:/var/www/certbot:rw
       - ~/.secrets/certbot/digitalocean.ini:/creds/digitalocean.ini:rw
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
