--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - public_files:/volume:rw
       - ./docker/nginx:/nginx_config:rw
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./data/certbot/conf:/etc/letsencrypt/live:rw
+      - ./data/certbot/conf:/etc/letsencrypt/live/ningunx-presx-por-luchar.info/:ro
       - ./data/certbot/www:/var/www/certbot:rw
     command: "/bin/sh -c '\
               cp -rf /volume/public/* /usr/share/nginx/html/ && \
@@ -36,7 +36,7 @@ services:
     image: certbot/dns-digitalocean
     restart: unless-stopped
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt/live/ningunx-presx-por-luchar.info:rw
+      - ./data/certbot/conf:/etc/letsencrypt/live/ningunx-presx-por-luchar.info/:rw
       - ./data/certbot/www:/var/www/certbot:rw
       - ~/.secrets/certbot/digitalocean.ini:/creds/digitalocean.ini:rw
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
