--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -9,37 +9,36 @@ services:
       - .:/site:rw
       - public_files:/volume:rw
 
-  nginx:
-    image: nginx
-    depends_on:
-      - "zola"
-    restart: unless-stopped
+  nginx-proxy:
     ports:
-      - 80:80
-      - 443:443
-    stdin_open: true
-    tty: true
-    environment:
-      - NGINX_ENTRYPOINT_QUIET_LOGS=1
+      - '80:80'
+      - '443:443'
+    container_name: nginx-proxy
     volumes:
-      - public_files:/volume:rw
-      - ./docker/nginx:/nginx_config:rw
-      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./data/certbot/conf:/etc/letsencrypt/live/ningunx-presx-por-luchar.info/:ro
-      - ./data/certbot/www:/var/www/certbot:rw
-    command: "/bin/sh -c '\
-              cp -rf /volume/public/* /usr/share/nginx/html/ && \
-              cp -rf /nginx_config/* /etc/nginx/ &&\
-              while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+      - '$HOME/certs:/etc/nginx/certs:ro'
+      - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
+      - '/var/run/docker.sock:/tmp/docker.sock:ro'
+    labels:
+      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true
+    image: jwilder/nginx-proxy
     
-  certbot:
-    image: certbot/dns-digitalocean
-    restart: unless-stopped
+  letsencrypt-nginx-proxy-companion:
+    container_name: nginx-letsencrypt
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt/live/ningunx-presx-por-luchar.info/:rw
-      - ./data/certbot/www:/var/www/certbot:rw
-      - ~/.secrets/certbot/digitalocean.ini:/creds/digitalocean.ini:rw
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - '$HOME/certs:/etc/nginx/certs:rw'
+      - '/var/run/docker.sock:/var/run/docker.sock:ro'
+    image: jrcs/letsencrypt-nginx-proxy-companion
+
+  httpd:
+    container_name: site-b
+    environment:
+      - VIRTUAL_HOST=www.ningunx-presx-por-luchar.info
+      - LETSENCRYPT_EMAIL=ozerno@protonmail.com
+      - LETSENCRYPT_HOST=www.ningunx-presx-por-luchar.info
+    volumes:
+      - public_files:/usr/local/apache2/htdocs/:rw
+    image: httpd
 
 volumes:
   public_files:
