--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     volumes:
       - '$HOME/certs:/etc/nginx/certs:rw'
       - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
     image: jrcs/letsencrypt-nginx-proxy-companion
   ## Fin
