--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       - letsencrypt
     environment:
       - VIRTUAL_HOST=www.ningunx-presx-por-luchar.info
+      - VIRTUAL_PORT=80
     networks:
       - proxy_net
       
