--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -62,6 +62,8 @@ services:
     environment:
       - VIRTUAL_HOST=www.ningunx-presx-por-luchar.info
       - VIRTUAL_PORT=80
+      - LETSENCRYPT_HOST=ningunx-presx-por-luchar.info,www.ningunx-presx-por-luchar.info
+      - LETSENCRYPT_EMAIL=ozerno@protonmail.com
     networks:
       - proxy_net
       
