--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -25,18 +25,28 @@ services:
       - proxy_net
     labels:
       - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
-  letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: encrypt
-    depends_on:
-      - nginx-proxy
-    volumes:
-      - $HOME/certs:/etc/nginx/certs:rw
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    volumes_from:
-      - nginx-proxy
+  acme-companion:
+    container_name: nginx-proxy-acme
     networks:
-      - proxy_net
+      - cert_net
+    volumes:
+      - '/var/run/docker.sock:/var/run/docker.sock:ro'
+      - 'acme:/etc/acme.sh'
+    environment:
+      - DEFAULT_EMAIL=ozerno@protonmail.com
+    image: nginxproxy/acme-companion
+  #letsencrypt:
+   # image: jrcs/letsencrypt-nginx-proxy-companion
+    #container_name: encrypt
+    #depends_on:
+    #  - nginx-proxy
+    #volumes:
+    #  - $HOME/certs:/etc/nginx/certs:rw
+    #  - /var/run/docker.sock:/var/run/docker.sock:ro
+    #volumes_from:
+    #  - nginx-proxy
+    #networks:
+    #  - proxy_net
   certs:
     image: tutum/apache-php
     container_name: certs
