--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - cert_net
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
-      - 'acme:/etc/acme.sh'
+      - acme:/etc/acme.sh
       - certs:/etc/nginx/certs
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
