--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    environments:
+      - "DEBUG=true"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - certs:/etc/nginx/certs
@@ -65,7 +67,6 @@ services:
       - acme-companion
     environment:
       - VIRTUAL_HOST=www.ningunx-presx-por-luchar.info
-      - VIRTUAL_PORT=80
       - LETSENCRYPT_HOST=ningunx-presx-por-luchar.info,www.ningunx-presx-por-luchar.info
       - LETSENCRYPT_EMAIL=ozerno@protonmail.com
     networks:
