--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -34,11 +34,9 @@ services:
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
       - acme:/etc/acme.sh
-      - certs:/etc/nginx/certs
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
     environment:
       - DEFAULT_EMAIL=ozerno@protonmail.com
+      - NGINX_PROXY_CONTAINER=proxy
     image: nginxproxy/acme-companion
   #letsencrypt:
    # image: jrcs/letsencrypt-nginx-proxy-companion
