--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     networks:
       - proxy_net
     labels:
-      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
   acme-companion:
     container_name: nginx-proxy-acme
     networks:
