--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
   acme-companion:
+    depends_on:
+      - nginx-proxy
     container_name: nginx-proxy-acme
     networks:
       - cert_net
