--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -8,71 +8,28 @@ services:
     volumes:
       - .:/site:rw
       - public_files:/volume:rw
-  nginx-proxy:
-    image: jwilder/nginx-proxy
-    container_name: proxy
+
+  swag:
+    depends_on:
+      - zola
+    image: ghcr.io/linuxserver/swag
+    container_name: swag
+    cap_add:
+      - NET_ADMIN
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Montevideo
+      - URL=ningunx-presx-por-luchar.info
+      - SUBDOMAINS=www
+      - VALIDATION=http
+    volumes:
+      - public_files:/config
     ports:
-      - 80:80
       - 443:443
-    environment:
-      - "DEBUG=true"
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - certs:/etc/nginx/certs
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-    networks:
-      - proxy_net
-    labels:
-      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
-  acme-companion:
-    depends_on:
-      - nginx-proxy
-    container_name: nginx-proxy-acme
-    networks:
-      - cert_net
-    volumes:
-      - '/var/run/docker.sock:/var/run/docker.sock:ro'
-      - acme:/etc/acme.sh
-      - certs:/etc/nginx/certs
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-    environment:
-      - DEFAULT_EMAIL=ozerno@protonmail.com
-      - NGINX_PROXY_CONTAINER=proxy
-    image: nginxproxy/acme-companion
-  #letsencrypt:
-   # image: jrcs/letsencrypt-nginx-proxy-companion
-    #container_name: encrypt
-    #depends_on:
-    #  - nginx-proxy
-    #volumes:
-    #  - $HOME/certs:/etc/nginx/certs:rw
-    #  - /var/run/docker.sock:/var/run/docker.sock:ro
-    #volumes_from:
-    #  - nginx-proxy
-    #networks:
-    #  - proxy_net
-  nginx:
-    image: nginx:alpine
-    container_name: www.ningunx-presx-por-luchar.info
-    volumes:
-      - "./docker/nginx/nginx.conf:/etc/nginx/nginx.conf"
-      - "./docker/nginx/sites-available:/etc/nginx/sites-available"
-      - "./docker/nginx/sites-enabled:/etc/nginx/sites-enabled"
-      - "./docker/nginx/nginxconfig.io/:/etc/nginx/nginxconfig.io/"
-      - "$HOME/certs:/etc/letsencrypt/ningunx-presx-por-luchar.info/"
-      - "public_files:/usr/share/nginx"
-    depends_on:
-      - nginx-proxy
-      - acme-companion
-    environment:
-      - VIRTUAL_HOST=www.ningunx-presx-por-luchar.info
-      - LETSENCRYPT_HOST=ningunx-presx-por-luchar.info
-      - LETSENCRYPT_EMAIL=ozerno@protonmail.com
-    networks:
-      - proxy_net
-      
+      - 80:80
+    restart: unless-stopped
+
 networks:
   cert_net:
     driver: bridge
