--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - URL=ningunx-presx-por-luchar.info
       - SUBDOMAINS=www
       - VALIDATION=http
+      - EMAIL=ozerno@protonmail.com
+      - STAGING=true
     volumes:
       - ./data:/config
     ports:
