--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   zola:
     image: balthek/zola:0.14.0 #Build once
-    command: "build --output-dir /volume"
+    command: "build --output-dir /volume/www"
     working_dir: /site
     privileged: true
     volumes:
