--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3"
 services:
   zola:
     image: balthek/zola:0.14.0 #Build once
-    command: "build --output-dir /volume/www"
+    command: "build --output-dir /www"
     working_dir: /site
     privileged: true
     volumes:
       - .:/site:rw
-      - ./data:/volume:rw
+      - ./data/www:/www:rw
 
   swag:
     depends_on:
