--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     privileged: true
     volumes:
       - .:/site:rw
-      - ./data/www:/www:rw
+      - ./public:/www:rw
 
   swag:
     depends_on:
@@ -26,6 +26,7 @@ services:
       - EMAIL=ozerno@protonmail.com
     volumes:
       - ./data:/config
+      - ./public:/config/www
     ports:
       - 443:443
       - 80:80
